# routes/api.php
@@ -33,8 +33,8 @@ middleware('auth:sanctum')-> */
 Route::post('/auth/token', [AuthController::class, 'login']);
 
 //Users
-Route::get('/user/like_category/{user_id}/{lang_id}', [UserController::class, 'showLikeCategory']);
-Route::post('/user/like_category', [UserController::class, 'createLikeCategory']);
+Route::middleware('auth:sanctum')->get('/user/like_category/{user_id}/{lang_id}', [UserController::class, 'showLikeCategory']);
+Route::post('/user/like_category/{user_id}/{category_id}', [UserController::class, 'createLikeCategory']);
 Route::delete('/user/like_category', [UserController::class, 'deleteLikeCategory']);
 Route::post('/user/like_imageproduct', [UserController::class, 'createLikeImageproduct']);
 Route::middleware('auth:sanctum')->get('/user/like_imageproduct/{user_id}/{lang_id}', [UserController::class, 'showLikeImageproduct']);
